Add detail to plots

--- a/results.ipynb
+++ b/results.ipynb
@@ -14,7 +14,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Gram-Schmidt QR Factorization"
+    "### Gram-Schmidt QR Factorization\n",
+    "\n",
+    "The list entries were copied from the generated `out/results.txt` file"
    ]
   },
   {
@@ -48,6 +50,7 @@
     "c_orthogonality = [8.15066e-14, 4.6161, 3.7716, 3.05451, 2.68287, 2.58839, 2.25456, 2.03113, 1.93039, 1.8155, 1.47168, 1.287, 1.22033, 1.17306]\n",
     "m_orthogonality = [8.15066e-14, 4.6161, 3.7716, 3.05451, 2.68287, 2.58839, 2.25456, 2.03113, 1.93039, 1.8155, 1.47168, 1.287, 1.22033, 1.17306]\n",
     "\n",
+    "plt.legend(\"||Q^TQ - I||_1 for test matrices with dimensions 100x___\")\n",
     "plt.yscale(\"log\") \n",
     "plt.plot(dimensions, c_orthogonality)\n",
     "plt.plot(dimensions, m_orthogonality, color='r')"
@@ -83,6 +86,8 @@
     "dimensions = [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 1500, 2000, 2500]\n",
     "c_orthogonality = [1.287, 1.83022, 2.52394, 3.29045, 4.08822, 5.07157, 6.11151, 7.35234, 8.50071, 9.31295, 14.9159, 23.217, 33.8078]\n",
     "m_orthogonality = [1.287, 1.83022, 2.52394, 3.29045, 4.08822, 5.07157, 6.11151, 7.35234, 8.50071, 9.31295, 14.9159, 23.217, 33.8078]\n",
+    "\n",
+    "\n",
     "\n",
     "plt.yscale(\"log\") \n",
     "plt.plot(dimensions, c_orthogonality)\n",
